<resources>
    <string name="app_name">FinalProject</string>




    <string name="nasa_button">Nasa Mars Rover photos</string>
    <string name="nasa_search_bar">Enter number between 0-1000</string>
    <string name="nasa_photos">Nasa Photos</string>
    <string name="saved_photos">Saved Photos</string>
    <string name="save_button">Save</string>
    <string name="delete_button">Delete</string>







    <string name="Title">Title</string>
    <string name="Result">Result:</string>
    <string name="name">Name goes here</string>
    <string name="date">Date goes here</string>
    <string name="url">Url goes here</string>



    <string name="saved_weather">Saved Weather</string>
    <string name="weather_now">Weather Now</string>
    <string name="nasa_mars_rover_photos">Nasa Mars Rover photos</string>
    <string name="new_york_times">New York Times</string>
    <string name="place_kitten_placeholder_images">Place Kitten Placeholder images</string>
    <string name="weatherstack">WeatherStack</string>
    <string name="city">City</string>
    <string name="enter_your_cite">Enter your Cite</string>
    <string name="search">search</string>
    <string name="locatetime">locateTime</string>
    <string name="search_btn">search</string>
    <string name="about_message">Click on “Weather now”:Type in the city you would like to retrieve the weather details.Hit search. You may save your research for future retrieval, by hitting on save button. Click on Saved weather You may navigate between the saved destination to display the respective weather.</string>
    <string name="about_title">How to use the WeatherStack?</string>
    <string name="about">about</string>
    <string name="ok">ok</string>
    <string name="undo">Undo</string>
    <string name="you_deleted_city">"You deleted City "</string>
    <string name="do_you_want_to_delete_this_city">"Do you want to Delete this City : "</string>
    <string name="question">Question</string>
    <string name="no">no</string>
    <string name="yes">yes</string>
    <string name="rover_name">Rover Name</string>
    <string name="camera_name">Camera Name</string>
    <string name="url_input">URL</string>
    <string name="enter_rover_name">Enter Rover Name</string>
    <string name="enter_camera_name">Enter Camera Name</string>
    <string name="enter_url">Enter URL</string>
    <string name="sample_input">Sample Input</string>












    <string name="kitten_about_message">typing width and height to get a kitten image with these dimensions,save kitten image and  dimensions and DateTime,recycler view  to show items</string>
    <string name="kitten_about_title">How to use the Place kitten?</string>

    <string name="do_you_want_to_delete_this_image_with_date">"Do you want to Delete this Image with  date: "</string>
    <string name="you_deleted_image_with_date">"You deleted image with date "</string>

    <string name="favourite_kitten_images">Favourite Kitten Images</string>


    <string name="width">width</string>
    <string name="height">height</string>
    <string name="get_image">Get Image</string>
    <string name="get_favourite_kittens">Get Favourite Kittens</string>

    <string name="search_kitten_image">Search Kitten Image</string>

    <string name="image_saved">image saved</string>













</resources>